singletons-base/tests/compile-and-dump/Singletons/T480.hs
module T480 where

import Data.Singletons.TH

$(singletons
  [d| f :: _ -> _
      f x = x
  |])
